@@ -1,3 +1,7 @@
+TheMightyDude (04 May 2010)
+--------------------------------------
+Small fix to the Insignia code that stops the players name from moving over when several players are at top rank.
+
 TheMightyDude (19 February 2010)
 --------------------------------------
 Testing SVN
